methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:5: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def hunt(x:Color):{while (!estSurBiscuit())
                   ^SlugSnail:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
             {if (isFacingTrail(x)) 
             ^SlugSnail:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
             prendBiscuit()}
             ^