methods.slug.SlugSnail.scala.code

avance();var x=getCouleurSol();recule()

def hunt(x:Color):{while (!estSurBiscuit())
             {if (isFacingTrail(x)) 
              {baisseBrosse()
               avance()
               leveBrosse()}
              else {gauche()}}
             prendBiscuit()}

def isFacingTrail(x:Color):Boolean = {if (estFaceMur())
                                      {return false}
                                      else {avance()
                                            var y=getCouleurSol();
                                            recule();
                                            if(x==y) {return true}
                                            else {return false}}}